--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Tekkadan Software Development</title>
+  <title>Sekolah Devops Cilsy</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h1 class="text-uppercase">
-            <strong>Buat Aplikasi Impianmu bersama kami</strong>
+            <strong>Devops Cilsy</strong>
           </h1>
           <hr>
         </div>
