add update on index

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading text-white">Kami Punya Yang Kamu Butuhkan !</h2>
+          <h2 class="section-heading text-white">Cilsy is da best! !</h2>
           <hr class="light my-4">
           <p class="text-faded mb-4">Tekkadan merupakan sebuah startup software development yang menyediakan pembuatan website dan aplikasi beserta sistem yang terintegrasi dengan Cloud Platfrom AWS, sehingga aplikasi yang anda inginkan bisa berjalan dengan sempurna.</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Mulai Sekarang!</a>
